syntax = "proto3";

service McGame {
    rpc Events (PlayerID) returns (stream Event) {}
    rpc GetWorld (Empty) returns (World) {}
    rpc SendEvent (PlayerEvent) returns (Empty) {}
}

message Empty {}

message PlayerID {
    string uuid = 1;
}

message Event {
    EventType event_type = 1;
    BlockUpdate block_update = 2;
    PlayerMove player_move = 3;
}

message BlockUpdate {
    int32 x = 1;
    int32 y = 2;
    Block new_block = 3;
}

message PlayerMove {
    float x = 1;
    float y = 2;
    float vx = 3;
    float vy = 4;
    PlayerID player = 5;
}

enum EventType {
    BlockUpdateEvent = 0;
    PlayerMoveEvent = 1;
}

message PlayerEvent {
    PlayerID player = 1;
    Event event = 2;
}

message World {
    int32 width = 1;
    int32 height = 2;
    repeated Block blocks = 3;
}

message Block {
    string block_type = 1;
}